--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <!--From https://codepen.io/frytyler/pen/EGdtg-->
 <head>
   <meta charset="UTF-8">
-  <title>ML API</title>
+  <title>Diabetes Detection</title>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
@@ -13,7 +13,7 @@
 
 <body>
 	<br>
-	<h2>&emsp;&emsp;&emsp;Diabetic Survival Prediction</h2>
+	<h2>&emsp;&emsp;&emsp; Diabetes Detection</h2>
 	<div class="login">
 		<!-- Main Input For Receiving Query to our ML -->
 		<form action="{{ url_for('predict')}}"method="post">
